# jetro-py

./: .gitignore  Cargo.toml  LICENSE  README.md  RELEASE.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
benches/: compare.py  requirements.txt
python/jetro/: __init__.py  __init__.pyi
src/: lib.rs
tests/: test_basics.py
