[package]
name = "jetro-py"
version = "0.1.4"
edition = "2021"
authors = ["Milad (Mike) Taghavi <mitghi.at.me.com>"]
license = "MIT"
description = "Python bindings for jetro — a JSON query, transform, and patch DSL"
repository = "https://github.com/mitghi/jetro-py"
publish = false

[lib]
name = "_jetro"
crate-type = ["cdylib"]

[dependencies]
jetro-core = "0.5.5"
serde_json = "1.0"
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py39"] }
